--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,16 @@ p{
 .inv{
     visibility: hidden;
 }
+
+h1{
+    font-family: arial, sans-serif; 
+    color: #ff0000;
+    font-size: 25px;
+    font-weight: bold;
+    font-style: italic;
+    text-align: center;
+    letter-spacing: 0.6pt;
+    word-spacing: 1.5pt;
+    line-height: 1.5;
+
+}
