--- a/css/login/login.css
+++ b/css/login/login.css
@@ -1,16 +1,13 @@
 
 html{
 
-	background: radial-gradient(circle, #000000, #7bc0eb) repeat scroll 0 0 rgba(233, 168, 111, 0);
+	background: radial-gradient(circle, #000000, #F3F3F3) repeat scroll 0 0 rgba(233, 168, 111, 0);
 }
 body{
 	background: transparent url(../img/login-bg-overlay.png) repeat;
 	min-height:100%; 
 }
-.alert{
-	margin: 20px auto;
-	width: 70%;
-}
+
 #login-block{	 
 	padding-top: 50px;
 	padding-bottom: 25px;
@@ -92,8 +89,8 @@ body{
 	color: white;
 	text-transform:uppercase ;	
 	text-shadow: 1px 2px 2px #c44c4c;
-	background: #e75a5a; 
-	border: 1px solid #953a3a;
+	background: #009788; 
+	border: 1px solid #009788;
 	-webkit-box-shadow: inset 0 1px 2px #ff8c8c;
 	-moz-box-shadow: inset 0 1px 2px #ff8c8c;
 	box-shadow: inset 0 1px 2px #ff8c8c;
@@ -104,7 +101,7 @@ body{
 	
 }
 .btn.btn-red:hover {	 
-	background: #d94444; 
+	background: #009788; 
 } 
 .btn.btn-red.btn-reset{
 	width: 180px;
