--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ html{
     background: #E7921B;
 }
 body{
-    background: transparent url(../img/login-bg-overlay.png) repeat;
+    background: transparent /*url(../img/login-bg-overlay.png)*/ repeat;
     min-height:100%; 
 }
 h1 {
